<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:id="@+id/etQuestion"
        android:layout_marginEnd="10dp"
        android:hint="@string/enter_question_here"
        app:layout_constraintTop_toTopOf="parent"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="0dp"
        app:layout_constraintEnd_toStartOf="@id/btnChooseImage1"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="10dp"
        android:id="@+id/etAnswer1"
        android:hint="@string/possible_answer_1"
        app:layout_constraintTop_toBottomOf="@id/etQuestion"/>
    <androidx.appcompat.widget.AppCompatRadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correct"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/etAnswer1"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"
        android:id="@+id/radio1"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnChooseImage1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/etAnswer1"
        app:layout_constraintBottom_toBottomOf="@id/etAnswer1"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/etAnswer2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnChooseImage2"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/possible_answer_2"
        app:layout_constraintTop_toBottomOf="@id/radio1"/>
    <androidx.appcompat.widget.AppCompatRadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correct"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/etAnswer2"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"
        android:id="@+id/radio2"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnChooseImage2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/etAnswer2"
        app:layout_constraintBottom_toBottomOf="@id/etAnswer2"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnChooseImage3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/etAnswer3"
        app:layout_constraintBottom_toBottomOf="@id/etAnswer3"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnChooseImage3"
        android:id="@+id/etAnswer3"
        android:hint="@string/possible_answer_3"
        app:layout_constraintTop_toBottomOf="@id/radio2"/>
    <androidx.appcompat.widget.AppCompatRadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correct"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/etAnswer3"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"
        android:id="@+id/radio3"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:id="@+id/submit"
        android:text="@string/submit"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/radio3"/>




</androidx.constraintlayout.widget.ConstraintLayout>